--- a/meu-cv/package.json
+++ b/meu-cv/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
+    "i18next": "^25.7.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0"
   },
