--- a/meu-cv/package.json
+++ b/meu-cv/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.1",
     "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.12.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
